Axtualziacion del modulo de servicio
incompleto faltan varias cosass

--- a/public/assets/admin/css/custom.css
+++ b/public/assets/admin/css/custom.css
@@ -2,6 +2,11 @@
     background: #007EA7;
 }
 
+.servicios{
+    background: #003249;
+}
+
+
 .btn_bg_primario{
     background: #003249;
     border-radius: 13px;
