--- a/public/assets/admin/css/servicios.css
+++ b/public/assets/admin/css/servicios.css
@@ -27,3 +27,7 @@
     padding: 5px 5px 5px 30px!important;
     margin-bottom: 0px!important;
 }
+
+.table td, .table th {
+    white-space: revert!important;
+}
