--- a/public/assets/admin/css/scanner.css
+++ b/public/assets/admin/css/scanner.css
@@ -46,7 +46,8 @@
     .container_request_qr{
         background: #80CED7;
         padding: 10px;
-        border-radius: 0 0 19px 19px;
+        margin-bottom: 1rem;
+        border-radius: 19px;
     }
 
     .no_aparece {
